- the modifier "not" for boolean properties returns a (negated) boolean sub-propery instead of just a string
- add possibility to blacklist packages from fetching structure information. Package GO is blacklisted by default.
- when fetching the structure of "promise" R objects, don't keep them in memory
- optimize the function to retrieve the structure of R object (for display in the object browser, and completion)
- tab-completion in the console will do partial completion, if all potential completion have a common start
- fixed: file-name completion would always assume the home directory as the current directory
- compilation fix for FreeBSD (thanks to Thierry Thomas)
- fixed: when executing commands line by line from the script editor, line breaks would be omitted
- Messages, warnings, and errors for plugin commands are shown in the output, instead of in a dialog

--- Version 0.4.7 - Apr-11-2007
- some fixes for GCC 4.3
- fixed: the presence of user objects called "missing", "assign", or "get" would confuse some RKWard internals
- several existing plugins have been improved in various ways
- use maximum permissible width in the object viewer
- fix a crash that occurred during startup under some circumstances
- when flushing the output, also delete all graphs
- add support for a "technical details" section in plugin help files
- add option to enable / disable single options of a radio or dropdown control in plugins
- t-test plugin now also allows to calculate a paired test
- show current working directory in the statusbar
- add run selection action to all HTML windows
- add custom icons for run line/selection/all
- make sure not to run parts of an incomplete user command. It would lead to all sorts of subtle problems
- if an incomplete command was piped through the console, the console does not become blocked for piping
- make "run current line" advance the cursor to next line after running