@@ -1,3 +1,4 @@
+- add command line option --disable-stack-check for systems where R C stack checking is buggy
 - the modifier "not" for boolean properties returns a (negated) boolean sub-propery instead of just a string
 - add possibility to blacklist packages from fetching structure information. Package GO is blacklisted by default.
 - when fetching the structure of "promise" R objects, don't keep them in memory
